# PrismCommander

./: CHANGELOG.md  PrismCommander_MANIFEST.yaml  PrismCommander_MANIFESTS.yaml  README.md  manifest.yaml  pc.py  pyproject.toml
.github/: copilot-instructions.md
config/: BORDER_PATTERNS.json  GLOBAL_CONFIG.json  GLOBAL_CONFIG.json.bak  PrismCommander_CONFIG.json  PrismCommander_CONFIG.json.bak
examples/: TESTS_CONFIG.py  exemplar.py  test_paths.json
pc/.github/: copilot-instructions.md
src/PrismCommander/: __init__.py  _pane_config.py  main.py
src/PrismCommander/panes/: __init__.py  dir_pane.py  file_list_pane.py  ops_pane.py  preview_pane.py
src/PrismCommander/widgets/: __init__.py  command_strip.py  status_bar.py
